cj - working on the integration test for the backend cust methods